maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:6: error: ':' expected but ')' found.
def isDirectionFree(dir) = {var dirAct = getDirection();
                       ^Escaper:24: error: identifier expected but '}' found.
}
^